[package]
name = "prpal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
log = { version = "0.4.17", features = ["std"] }
reqwest = { version = "0.11.14" }
serde = { version  = "1.0.93", features = ["derive"] }
serde_json = { version  = "1.0.93" }
simplelog = { version = "0.12" }
tokio = { version = "1", features = ["full"] }